--- a/css/style.css
+++ b/css/style.css
@@ -467,8 +467,9 @@ a:focus {
 }
 
 .work_section .detail_container .box {
-  margin-bottom: 20px;
-  padding: 20px;
+  margin-bottom: 10px;
+  padding: 10px;
+  border-radius: 2%;
   -webkit-box-shadow: 0 0 25px 0 rgba(0, 0, 0, 0.15);
           box-shadow: 0 0 25px 0 rgba(0, 0, 0, 0.15);
 }
@@ -492,7 +493,7 @@ a:focus {
 }
 
 .work_section .detail_container .box .top-box h5 {
-  font-weight: 600;
+  font-weight: 700;
   margin: 0;
 }
 
