--- a/css/style.css
+++ b/css/style.css
@@ -357,9 +357,19 @@ a:focus {
 }
 
 .about_section .img-box img {
-  max-width: 100%;
+  max-width: 90%;
 }
 
+.about_section .detail-box button {
+  background-color: #00bbfa;
+  color: #000000;
+  font-size: small;
+  padding: 2px;
+  margin-left: 20px;
+}
+.about_section .detail-box .offcanvas-body img {
+  max-width: 100%;
+}
 .about_section .detail-box p {
   margin-top: 25px;
 }
@@ -375,6 +385,8 @@ a:focus {
 .about_section .detail-box a:hover {
   background-color: #e0cd61;
 }
+
+
 
 .dokumentasi-belajar a {
   display: inline-block;
@@ -469,6 +481,19 @@ a:focus {
   background-color: #e0cd61;
 }
 
+
+.about_section .detail-box1 {
+  margin-bottom: 10px;
+  padding: 10px;
+  color: #000000;
+  background-color: #ffffff;
+  border-radius: 1ch;
+  -webkit-box-shadow: 0 0 25px 0 rgba(0, 0, 0, 0.15);
+          box-shadow: 0 0 25px 0 rgba(0, 0, 0, 0.15);
+  
+}
+
+
 .work_section .heading_container {
   margin-bottom: 45px;
 }
@@ -482,7 +507,8 @@ a:focus {
 .work_section .detail_container .box {
   margin-bottom: 10px;
   padding: 10px;
-  border-radius: 2%;
+  background-color: #4C7B8B;
+  border-radius: 1ch;
   -webkit-box-shadow: 0 0 25px 0 rgba(0, 0, 0, 0.15);
           box-shadow: 0 0 25px 0 rgba(0, 0, 0, 0.15);
 }
