--- a/css/style.css
+++ b/css/style.css
@@ -364,8 +364,8 @@ a:focus {
   background-color: #00bbfa;
   color: #000000;
   font-size: small;
-  padding: 2px;
-  margin-left: 20px;
+  padding: 3px;
+  margin-left: 0px;
 }
 .about_section .detail-box .offcanvas-body img {
   max-width: 100%;
@@ -486,7 +486,7 @@ a:focus {
   margin-bottom: 10px;
   padding: 10px;
   color: #000000;
-  background-color: #ffffff;
+  background-color: #b6b6b6;
   border-radius: 1ch;
   -webkit-box-shadow: 0 0 25px 0 rgba(0, 0, 0, 0.15);
           box-shadow: 0 0 25px 0 rgba(0, 0, 0, 0.15);
